syntax = "proto3";
package v1;
option go_package = "./proto";
import "google/api/annotations.proto"; // Make sure this import is correct

// Movie service 
message ListMoviesRequest {
  string id = 1;
}

message ListMoviesResponse {
  string id = 1 ;
}

// User service 
message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1 ;
}

service GatewayService {
  rpc ListMovies (ListMoviesRequest) returns (ListMoviesResponse){
      option (google.api.http) = {
      get: "/v1/api/movies"
      };
  }
  rpc GetUser (ListMoviesRequest) returns (ListMoviesResponse){
      option (google.api.http) = {
      get: "/v1/api/{id}"
      };
  }
}
